--- a/templates/chat/chats.html
+++ b/templates/chat/chats.html
@@ -2,14 +2,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Chats</title>
+        <title>Recent chats</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-<h2>CHATS</h2>
-<ul>
-{% for chat in chats %}
-<li><a href="{{ chat.chat_url }}">{{ chat.user.username }} - {{ chat.user.phoneno }}</a></li>
-{% endfor %}
-</ul>
-    </body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">ChatApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li> -->
+        </ul>
+        </div>
+    </div>
+    </nav>
+
+<div class="container mt-5">
+<div class="row">
+<div class="col-md-6 offset-3">
+    <h4>Users</h4>
+    <p></p>
+    <ul class="list-group">
+    {% for chat in chats %}
+    <li class="list-group-item"><a  href="{{ chat.chat_url }}">{{ chat.user.username }} - {{ chat.user.phoneno }}</a></li>
+    {% endfor %}
+    </ul>
+</div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
