--- a/templates/chat/index.html
+++ b/templates/chat/index.html
@@ -3,26 +3,45 @@
     <head>
         <meta charset="utf-8">
         <title>Login</title>
+       <!-- CSS only -->
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-       Type Your Phone Number To Login?<br>
-       <form method="POST">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">ChatApp</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <!-- <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6 offset-3">
+       <form method="POST" class="form-horizontal">
         {% csrf_token %}
-        <input id="room-name-input" name="phone_no" type="text" size="100" required><br>
-        <input id="room-name-submit" type="button" value="Next"><br>
+        <div class="form-group">
+        <label for="room-name-input">Enter your phone number to get started</label>
+        <p></p>
+        <input class="form-control" id="room-name-input" name="phone_no" type="text" size="100" required><br>
+       </div>
+       <div class="form-group">
+        <input class="btn btn-primary" id="room-name-submit" type="submit" value="Next"><br>
+        </div>
+        </div>
     </form>
-        <!-- <script>
-            document.querySelector('#room-name-input').focus();
-            document.querySelector('#room-name-input').onkeyup = function(e){
-                if(e.keyCode === 13){
-                    document.querySelector('#room-name-submit').click();
-                };
-            }
+</div>
+</div>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-            document.querySelector('#room-name-submit').onclick = function(e){
-               var roomName = document.querySelector('#room-name-input').value;
-               window.location.pathname = '/chat/' + roomName + '/'
-            }
-        </script> -->
     </body>
 </html>
