--- a/templates/chat/messages.html
+++ b/templates/chat/messages.html
@@ -4,52 +4,92 @@
     <head>
         <meta charset="utf-8">
         <title>Messages</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
-        <textarea id="chat-log" cols="100" rows="20">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">ChatApp</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Hi, {{ user.username }}</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-6 offset-2">
+        <p></p>
+        <textarea class="form-control" id="chat-log" cols="30" rows="10">
         {% for message in messages %}
         {{ message.username }} : {{ message.message }}
         {% endfor %}
         </textarea><br>
-
-        <input id="chat-message-input" type="text" size="100"><br>
-        <input id="chat-message-submit" type="button" value="Send"><br>
+        <input id="chat-my-username" value="" type="hidden">
+        <div class="input-group mb-3">
+        <input type="text" id="chat-message-input" class="form-control" placeholder="write a message.." aria-label="message" aria-describedby="basic-addon2">
+        <span class="input-group-text btn btn-primary" id="chat-message-submit">Send</span>
+        </div>
+          <!-- <input class="form-control" type="button" value="Send"> -->
+    </div>
+   </div>
+   {{ user.username|json_script:"username" }}
    {{ my_id|json_script:"my-id" }}
    {{ other_user_id|json_script:"other-user-id" }}
    {{ chat_no|json_script:"chat-no" }}
-        <script>
+    <script>
     const my_id = JSON.parse(document.getElementById('my-id').textContent);
+    const username = JSON.parse(document.getElementById('username').textContent);
     const other_user_id = JSON.parse(document.getElementById('other-user-id').textContent);
     const chat_no = JSON.parse(document.getElementById('chat-no').textContent);
     var ws_url = 'ws://' + window.location.host + '/ws/chats/messages/' + my_id + '/' + other_user_id + '/' + chat_no + '/';
     const chatSocket = new WebSocket(ws_url);
     chatSocket.onmessage = function(e){
         const data = JSON.parse(e.data);
-        console.log(data.message);
-        document.querySelector("#chat-log").value += (data.message + '\n');
-
+       // console.log(data);
+        document.querySelector("#chat-log").value += (data.name + ": " + data.message + '\n');
+        ScrollEditor();
     };
 
     chatSocket.onclose = function(e){
       console.error('Chat socket closed unexpectedly');
     };
+
     document.querySelector('#chat-message-input').focus();
     document.querySelector('#chat-message-input').onkeyup = function(e){
         if(e.keyCode === 13){
             document.querySelector('#chat-message-submit').click();
         };
     }
+    //console.log(username);
     document.querySelector('#chat-message-submit').onclick = function(e){
        const messageInputDom = document.querySelector('#chat-message-input');
        const message = messageInputDom.value;
+    
        if(message.length > 0){
        chatSocket.send(JSON.stringify({
            'message' : message,
+           'name' : username
        },),);
        messageInputDom.value = '';
     }
-     
+    ScrollEditor();
     }
-        </script>
-    </body>
+    ScrollEditor();
+    function ScrollEditor(){
+        if($("#chat-log").length > 0){
+          $("#chat-log").scrollTop($("#chat-log")[0].scrollHeight - $("#chat-log").height());
+        }
+    }
+    </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 </html>
