--- a/templates/chat/chats.html
+++ b/templates/chat/chats.html
@@ -15,9 +15,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li> -->
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Hi, {{ user.username }}</a>
+              </li>
         </ul>
         </div>
     </div>
@@ -30,7 +30,7 @@
     <p></p>
     <ul class="list-group">
     {% for chat in chats %}
-    <li class="list-group-item"><a  href="{{ chat.chat_url }}">{{ chat.user.username }} - {{ chat.user.phoneno }}</a></li>
+    <li class="list-group-item"><a class="nav-link" href="{{ chat.chat_url }}">{{ chat.user.username }} - {{ chat.user.phoneno }}</a></li>
     {% endfor %}
     </ul>
 </div>
